LEVR/levr-core/src/java/com/eduworks/resolver/lang/output/resolverv2Parser.java
// $ANTLR 3.1.1 src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g 2014-04-17 15:57:20

package com.eduworks.resolver.lang.output;

import java.util.Iterator;
import java.util.Stack;

import org.antlr.runtime.BaseRecognizer;
import org.antlr.runtime.BitSet;
import org.antlr.runtime.DFA;
import org.antlr.runtime.NoViableAltException;
import org.antlr.runtime.Parser;
import org.antlr.runtime.RecognitionException;
import org.antlr.runtime.RecognizerSharedState;
import org.antlr.runtime.Token;
import org.antlr.runtime.TokenStream;
import org.json.JSONException;
import org.json.JSONObject;

import com.eduworks.lang.EwMap;
import com.eduworks.lang.json.impl.EwJsonObject;

public class resolverv2Parser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ID", "SERVLETID", "ATID", "WS", "FUNCTIONID", "DOTFUNCTIONID", "COMMENT", "INT", "STRING", "HEX_DIGIT", "UNICODE_ESC", "OCTAL_ESC", "ESC_SEQ", "';'", "'='", "'{'", "'}'", "' ->'", "'('", "')'", "','"
    };
    public static final int SERVLETID=5;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int FUNCTIONID=8;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int UNICODE_ESC=14;
    public static final int T__20=20;
    public static final int OCTAL_ESC=15;
    public static final int HEX_DIGIT=13;
    public static final int INT=11;
    public static final int ATID=6;
    public static final int ID=4;
    public static final int EOF=-1;
    public static final int T__19=19;
    public static final int ESC_SEQ=16;
    public static final int WS=7;
    public static final int T__18=18;
    public static final int T__17=17;
    public static final int DOTFUNCTIONID=9;
    public static final int COMMENT=10;
    public static final int STRING=12;

    // delegates
    // delegators


        public resolverv2Parser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public resolverv2Parser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return resolverv2Parser.tokenNames; }
    public String getGrammarFileName() { return "src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g"; }


    	public boolean debug = false;
    	public EwMap<String,JSONObject> ids = new EwMap<String,JSONObject>();
    	public EwMap<String,JSONObject> servlets = new EwMap<String,JSONObject>();
    	public EwMap<String,JSONObject> functions = new EwMap<String,JSONObject>();
    	public JSONObject obj = new EwJsonObject();
    	public Stack<JSONObject> stk = new Stack<JSONObject>();



    // $ANTLR start "parse"
    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:78:1: parse : ( ( decl ';' ( WS )? ) ( parse )? | COMMENT ( WS )? ( parse )? | WS ( parse )? | EOF );
    public final void parse() throws RecognitionException {
        try {
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:3: ( ( decl ';' ( WS )? ) ( parse )? | COMMENT ( WS )? ( parse )? | WS ( parse )? | EOF )
            int alt6=4;
            switch ( input.LA(1) ) {
            case ID:
            case SERVLETID:
            case FUNCTIONID:
                {
                alt6=1;
                }
                break;
            case COMMENT:
                {
                alt6=2;
                }
                break;
            case WS:
                {
                alt6=3;
                }
                break;
            case EOF:
                {
                alt6=4;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:5: ( decl ';' ( WS )? ) ( parse )?
                    {
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:5: ( decl ';' ( WS )? )
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:6: decl ';' ( WS )?
                    {
                    pushFollow(FOLLOW_decl_in_parse545);
                    decl();

                    state._fsp--;

                    match(input,17,FOLLOW_17_in_parse546); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:13: ( WS )?
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==WS) ) {
                        alt1=1;
                    }
                    switch (alt1) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:13: WS
                            {
                            match(input,WS,FOLLOW_WS_in_parse547); 

                            }
                            break;

                    }


                    }

                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:18: ( parse )?
                    int alt2=2;
                    int LA2_0 = input.LA(1);

                    if ( (LA2_0==EOF||(LA2_0>=ID && LA2_0<=SERVLETID)||(LA2_0>=WS && LA2_0<=FUNCTIONID)||LA2_0==COMMENT) ) {
                        alt2=1;
                    }
                    switch (alt2) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:79:18: parse
                            {
                            pushFollow(FOLLOW_parse_in_parse551);
                            parse();

                            state._fsp--;


                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:80:5: COMMENT ( WS )? ( parse )?
                    {
                    match(input,COMMENT,FOLLOW_COMMENT_in_parse558); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:80:13: ( WS )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==WS) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:80:13: WS
                            {
                            match(input,WS,FOLLOW_WS_in_parse560); 

                            }
                            break;

                    }

                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:80:17: ( parse )?
                    int alt4=2;
                    int LA4_0 = input.LA(1);

                    if ( (LA4_0==EOF||(LA4_0>=ID && LA4_0<=SERVLETID)||(LA4_0>=WS && LA4_0<=FUNCTIONID)||LA4_0==COMMENT) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:80:17: parse
                            {
                            pushFollow(FOLLOW_parse_in_parse563);
                            parse();

                            state._fsp--;


                            }
                            break;

                    }


                    }
                    break;
                case 3 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:81:5: WS ( parse )?
                    {
                    match(input,WS,FOLLOW_WS_in_parse570); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:81:8: ( parse )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==EOF||(LA5_0>=ID && LA5_0<=SERVLETID)||(LA5_0>=WS && LA5_0<=FUNCTIONID)||LA5_0==COMMENT) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:81:8: parse
                            {
                            pushFollow(FOLLOW_parse_in_parse572);
                            parse();

                            state._fsp--;


                            }
                            break;

                    }


                    }
                    break;
                case 4 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:82:5: EOF
                    {
                    match(input,EOF,FOLLOW_EOF_in_parse579); 

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "parse"


    // $ANTLR start "decl"
    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:85:1: decl : (i= ID ( WS )? '=' ( WS )? ( functioncall | '{' param '}' ) | x= ID ( WS )? '=' ( WS )? y= ID ( dotfunctioncall )? | s= SERVLETID ( WS )? ' ->' ( WS )? i= ID | s= SERVLETID ( WS )? '=' ( WS )? i= ID | s= FUNCTIONID ( WS )? ' ->' ( WS )? i= ID | s= FUNCTIONID ( WS )? '=' ( WS )? i= ID );
    public final void decl() throws RecognitionException {
        Token i=null;
        Token x=null;
        Token y=null;
        Token s=null;

        try {
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:86:2: (i= ID ( WS )? '=' ( WS )? ( functioncall | '{' param '}' ) | x= ID ( WS )? '=' ( WS )? y= ID ( dotfunctioncall )? | s= SERVLETID ( WS )? ' ->' ( WS )? i= ID | s= SERVLETID ( WS )? '=' ( WS )? i= ID | s= FUNCTIONID ( WS )? ' ->' ( WS )? i= ID | s= FUNCTIONID ( WS )? '=' ( WS )? i= ID )
            int alt21=6;
            alt21 = dfa21.predict(input);
            switch (alt21) {
                case 1 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:86:4: i= ID ( WS )? '=' ( WS )? ( functioncall | '{' param '}' )
                    {
                    i=(Token)match(input,ID,FOLLOW_ID_in_decl592); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:86:9: ( WS )?
                    int alt7=2;
                    int LA7_0 = input.LA(1);

                    if ( (LA7_0==WS) ) {
                        alt7=1;
                    }
                    switch (alt7) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:86:9: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl594); 

                            }
                            break;

                    }

                    match(input,18,FOLLOW_18_in_decl596); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:86:15: ( WS )?
                    int alt8=2;
                    int LA8_0 = input.LA(1);

                    if ( (LA8_0==WS) ) {
                        alt8=1;
                    }
                    switch (alt8) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:86:15: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl597); 

                            }
                            break;

                    }

                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:87:3: ( functioncall | '{' param '}' )
                    int alt9=2;
                    int LA9_0 = input.LA(1);

                    if ( (LA9_0==FUNCTIONID) ) {
                        alt9=1;
                    }
                    else if ( (LA9_0==19) ) {
                        alt9=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 9, 0, input);

                        throw nvae;
                    }
                    switch (alt9) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:87:5: functioncall
                            {
                            pushFollow(FOLLOW_functioncall_in_decl604);
                            functioncall();

                            state._fsp--;

                            ids.put(i.getText(),obj);obj = new EwJsonObject();

                            }
                            break;
                        case 2 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:88:5: '{' param '}'
                            {
                            match(input,19,FOLLOW_19_in_decl615); 
                            pushFollow(FOLLOW_param_in_decl616);
                            param();

                            state._fsp--;

                            match(input,20,FOLLOW_20_in_decl617); 
                            ids.put(i.getText(),obj);obj = new EwJsonObject();

                            }
                            break;

                    }


                    }
                    break;
                case 2 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:90:4: x= ID ( WS )? '=' ( WS )? y= ID ( dotfunctioncall )?
                    {
                    x=(Token)match(input,ID,FOLLOW_ID_in_decl633); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:90:9: ( WS )?
                    int alt10=2;
                    int LA10_0 = input.LA(1);

                    if ( (LA10_0==WS) ) {
                        alt10=1;
                    }
                    switch (alt10) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:90:9: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl635); 

                            }
                            break;

                    }

                    match(input,18,FOLLOW_18_in_decl637); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:90:15: ( WS )?
                    int alt11=2;
                    int LA11_0 = input.LA(1);

                    if ( (LA11_0==WS) ) {
                        alt11=1;
                    }
                    switch (alt11) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:90:15: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl638); 

                            }
                            break;

                    }

                    y=(Token)match(input,ID,FOLLOW_ID_in_decl643); 
                    obj=ids.get(y.getText());
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:91:3: ( dotfunctioncall )?
                    int alt12=2;
                    int LA12_0 = input.LA(1);

                    if ( (LA12_0==DOTFUNCTIONID) ) {
                        alt12=1;
                    }
                    switch (alt12) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:91:3: dotfunctioncall
                            {
                            pushFollow(FOLLOW_dotfunctioncall_in_decl653);
                            dotfunctioncall();

                            state._fsp--;


                            }
                            break;

                    }

                    ids.put(x.getText(),obj);obj = new EwJsonObject();

                    }
                    break;
                case 3 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:92:4: s= SERVLETID ( WS )? ' ->' ( WS )? i= ID
                    {
                    s=(Token)match(input,SERVLETID,FOLLOW_SERVLETID_in_decl666); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:92:16: ( WS )?
                    int alt13=2;
                    int LA13_0 = input.LA(1);

                    if ( (LA13_0==WS) ) {
                        alt13=1;
                    }
                    switch (alt13) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:92:16: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl668); 

                            }
                            break;

                    }

                    match(input,21,FOLLOW_21_in_decl671); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:92:26: ( WS )?
                    int alt14=2;
                    int LA14_0 = input.LA(1);

                    if ( (LA14_0==WS) ) {
                        alt14=1;
                    }
                    switch (alt14) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:92:26: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl673); 

                            }
                            break;

                    }

                    i=(Token)match(input,ID,FOLLOW_ID_in_decl678); 
                    servlets.put(s.getText(),ids.get(i.getText()));

                    }
                    break;
                case 4 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:93:4: s= SERVLETID ( WS )? '=' ( WS )? i= ID
                    {
                    s=(Token)match(input,SERVLETID,FOLLOW_SERVLETID_in_decl689); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:93:16: ( WS )?
                    int alt15=2;
                    int LA15_0 = input.LA(1);

                    if ( (LA15_0==WS) ) {
                        alt15=1;
                    }
                    switch (alt15) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:93:16: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl691); 

                            }
                            break;

                    }

                    match(input,18,FOLLOW_18_in_decl694); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:93:24: ( WS )?
                    int alt16=2;
                    int LA16_0 = input.LA(1);

                    if ( (LA16_0==WS) ) {
                        alt16=1;
                    }
                    switch (alt16) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:93:24: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl696); 

                            }
                            break;

                    }

                    i=(Token)match(input,ID,FOLLOW_ID_in_decl701); 
                    servlets.put(s.getText(),ids.get(i.getText()));

                    }
                    break;
                case 5 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:94:4: s= FUNCTIONID ( WS )? ' ->' ( WS )? i= ID
                    {
                    s=(Token)match(input,FUNCTIONID,FOLLOW_FUNCTIONID_in_decl712); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:94:17: ( WS )?
                    int alt17=2;
                    int LA17_0 = input.LA(1);

                    if ( (LA17_0==WS) ) {
                        alt17=1;
                    }
                    switch (alt17) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:94:17: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl714); 

                            }
                            break;

                    }

                    match(input,21,FOLLOW_21_in_decl717); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:94:27: ( WS )?
                    int alt18=2;
                    int LA18_0 = input.LA(1);

                    if ( (LA18_0==WS) ) {
                        alt18=1;
                    }
                    switch (alt18) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:94:27: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl719); 

                            }
                            break;

                    }

                    i=(Token)match(input,ID,FOLLOW_ID_in_decl724); 
                    functions.put(s.getText(),ids.get(i.getText()));

                    }
                    break;
                case 6 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:95:4: s= FUNCTIONID ( WS )? '=' ( WS )? i= ID
                    {
                    s=(Token)match(input,FUNCTIONID,FOLLOW_FUNCTIONID_in_decl734); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:95:17: ( WS )?
                    int alt19=2;
                    int LA19_0 = input.LA(1);

                    if ( (LA19_0==WS) ) {
                        alt19=1;
                    }
                    switch (alt19) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:95:17: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl736); 

                            }
                            break;

                    }

                    match(input,18,FOLLOW_18_in_decl739); 
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:95:25: ( WS )?
                    int alt20=2;
                    int LA20_0 = input.LA(1);

                    if ( (LA20_0==WS) ) {
                        alt20=1;
                    }
                    switch (alt20) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:95:25: WS
                            {
                            match(input,WS,FOLLOW_WS_in_decl741); 

                            }
                            break;

                    }

                    i=(Token)match(input,ID,FOLLOW_ID_in_decl746); 
                    functions.put(s.getText(),ids.get(i.getText()));

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "decl"


    // $ANTLR start "functioncall"
    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:99:1: functioncall : x= FUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? ;
    public final void functioncall() throws RecognitionException {
        Token x=null;

        try {
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:100:2: (x= FUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? )
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:100:4: x= FUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )?
            {
            x=(Token)match(input,FUNCTIONID,FOLLOW_FUNCTIONID_in_functioncall764); 
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:100:17: ( WS )?
            int alt22=2;
            int LA22_0 = input.LA(1);

            if ( (LA22_0==WS) ) {
                alt22=1;
            }
            switch (alt22) {
                case 1 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:100:17: WS
                    {
                    match(input,WS,FOLLOW_WS_in_functioncall766); 

                    }
                    break;

            }

            match(input,22,FOLLOW_22_in_functioncall768); 
            try{obj.put("function",x.getText().substring(1));}catch(JSONException e){}
            pushFollow(FOLLOW_param_in_functioncall777);
            param();

            state._fsp--;

            match(input,23,FOLLOW_23_in_functioncall778); 
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:101:12: ( dotfunctioncall )?
            int alt23=2;
            int LA23_0 = input.LA(1);

            if ( (LA23_0==DOTFUNCTIONID) ) {
                alt23=1;
            }
            switch (alt23) {
                case 1 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:101:12: dotfunctioncall
                    {
                    pushFollow(FOLLOW_dotfunctioncall_in_functioncall780);
                    dotfunctioncall();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "functioncall"


    // $ANTLR start "dotfunctioncall"
    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:104:1: dotfunctioncall : y= DOTFUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? ;
    public final void dotfunctioncall() throws RecognitionException {
        Token y=null;

        try {
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:105:2: (y= DOTFUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? )
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:105:4: y= DOTFUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )?
            {
            y=(Token)match(input,DOTFUNCTIONID,FOLLOW_DOTFUNCTIONID_in_dotfunctioncall795); 
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:105:20: ( WS )?
            int alt24=2;
            int LA24_0 = input.LA(1);

            if ( (LA24_0==WS) ) {
                alt24=1;
            }
            switch (alt24) {
                case 1 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:105:20: WS
                    {
                    match(input,WS,FOLLOW_WS_in_dotfunctioncall797); 

                    }
                    break;

            }

            match(input,22,FOLLOW_22_in_dotfunctioncall799); 
            try{stk.push(obj);obj = new EwJsonObject();obj.put("function",y.getText().substring(1));}catch(JSONException e){}
            pushFollow(FOLLOW_param_in_dotfunctioncall808);
            param();

            state._fsp--;

            try{obj.put("obj",stk.pop());}catch(JSONException e){}
            match(input,23,FOLLOW_23_in_dotfunctioncall819); 
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:107:7: ( dotfunctioncall )?
            int alt25=2;
            int LA25_0 = input.LA(1);

            if ( (LA25_0==DOTFUNCTIONID) ) {
                alt25=1;
            }
            switch (alt25) {
                case 1 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:107:7: dotfunctioncall
                    {
                    pushFollow(FOLLOW_dotfunctioncall_in_dotfunctioncall821);
                    dotfunctioncall();

                    state._fsp--;


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "dotfunctioncall"


    // $ANTLR start "param"
    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:110:1: param : ( ( WS )? (x= ID ( WS )? '=' ( WS )? (y= FUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? | y= STRING | y= INT | y= ID ( dotfunctioncall )? ) | x= ID | ( WS )? ) ( ( WS )? ',' param )? ( WS )? | ( WS )? x= ATID ( ( WS )? ',' param )? ( WS )? );
    public final void param() throws RecognitionException {
        Token x=null;
        Token y=null;

        try {
            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:111:2: ( ( WS )? (x= ID ( WS )? '=' ( WS )? (y= FUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? | y= STRING | y= INT | y= ID ( dotfunctioncall )? ) | x= ID | ( WS )? ) ( ( WS )? ',' param )? ( WS )? | ( WS )? x= ATID ( ( WS )? ',' param )? ( WS )? )
            int alt42=2;
            switch ( input.LA(1) ) {
            case WS:
                {
                int LA42_1 = input.LA(2);

                if ( (LA42_1==ID||LA42_1==WS||LA42_1==20||(LA42_1>=23 && LA42_1<=24)) ) {
                    alt42=1;
                }
                else if ( (LA42_1==ATID) ) {
                    alt42=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 42, 1, input);

                    throw nvae;
                }
                }
                break;
            case ID:
            case 20:
            case 23:
            case 24:
                {
                alt42=1;
                }
                break;
            case ATID:
                {
                alt42=2;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 42, 0, input);

                throw nvae;
            }

            switch (alt42) {
                case 1 :
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:111:4: ( WS )? (x= ID ( WS )? '=' ( WS )? (y= FUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? | y= STRING | y= INT | y= ID ( dotfunctioncall )? ) | x= ID | ( WS )? ) ( ( WS )? ',' param )? ( WS )?
                    {
                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:111:4: ( WS )?
                    int alt26=2;
                    int LA26_0 = input.LA(1);

                    if ( (LA26_0==WS) ) {
                        alt26=1;
                    }
                    switch (alt26) {
                        case 1 :
                            // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:111:4: WS
                            {
                            match(input,WS,FOLLOW_WS_in_param838); 

                            }
                            break;

                    }

                    // src\\java\\com\\eduworks\\resolver\\lang\\resolverv2.g:111:8: (x= ID ( WS )? '=' ( WS )? (y= FUNCTIONID ( WS )? '(' param ')' ( dotfunctioncall )? | y= STRING | y= INT | y= ID ( dotfunctioncall )? ) | x= ID | ( WS )? )
                    int alt34=3;
                    int LA34_0 = input.LA(1);

                    if ( (LA34_0==ID) ) {
                        switch ( input.LA(2) ) {
                        case WS:
                            {
                            int LA34_3 = input.LA(3);

                            if ( (LA34_3==WS||LA34_3==20||(LA34_3>=23 && LA34_3<=24)) ) {
                                alt34=2;
                            }
                            else if ( (LA34_3==18) ) {
                                alt34=1;
                            }
                            else {
                                NoViableAltException nvae =
                                    new NoViableAltException("", 34, 3, input);
